# awaitable-property

./: README.md  flake.nix  pyproject.toml
.github/workflows/: test.yml
awaitable_property/: __init__.py  _awaitable_property.py
tests/: test_caching.py  test_class.py  test_dataclass.py
