[project]
name = "awaitable_property"
version = "0.0.1"
authors = [
  { name="Alexander Sosedkin", email="monk@unboiled.info" },
]
description = "@awaitable_property decorator, lets you await obj.attrname"
urls.homepage = "https://github.com/t184256/awaitable-property"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)"
]
requires-python = ">=3.11"
dependencies = [] # TODO: list python dependencies
optional-dependencies.test = [
  "pytest", "pytest-asyncio",
  "coverage", "pytest-cov",
]
optional-dependencies.lint = [
  "pre-commit",
  "mypy",
  "ruff",
  "codespell",
  "actionlint-py",
  "pre-commit-hooks",
]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.pytest.ini_options]
addopts = "--cov --cov-report term-missing --doctest-modules"

[tool.coverage]
run.source = [ "awaitable_property" ]
run.branch = true
report.exclude_lines = [
  "# pragma: no cover",
  "if __name__ == .__main__.:",
  "...  # overload",
]
report.fail_under = 100

[tool.mypy]
strict = true

[tool.ruff]
line-length = 79
preview = true
lint.select = [ "ALL" ]
lint.ignore = [
  "D105",  # undocumented-magic-method
  "D203",  # one-blank-line-before-class
  "D213",  # multi-line-summary-second-line
  "Q001",  # bad-quotes-multiline-string
]
lint.per-file-ignores."tests/**" = [
  "INP001",  # implicit-namespace-package
  "S101",  # assert
]
lint.flake8-quotes.inline-quotes = "single"
lint.flake8-quotes.multiline-quotes = "single"
lint.flake8-copyright.notice-rgx = '# SPDX-FileCopyrightText: 2023 Alexander Sosedkin <monk@unboiled.info>\n# SPDX-License-Identifier: GPL-3.0\n'
format.quote-style = "single"
format.preview = true
